--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -31,6 +31,12 @@ jobs:
         run: pnpm install
       - name: Run Build
         run: pnpm run build
+      - name: Run Lighthouse Box
+        uses:
+        with:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIST_ID: 183e93e101576aaf73381ea9d2f6c7ef
+          URL: https://hamtolchu.dev/
       - name: Run Custom Action
         id: run_custom_action
         uses: seungjaey/lhci-custom-action@v0.0.6
