--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -21,16 +21,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Set up pnpm
-        uses: pnpm/action-setup@v2.2.2
-        id: pnpm-install
-        with:
-          version: 7.5.0
-          run_install: false
-      - name: Install dependencies
-        run: pnpm install
+      - name: Set up npm
+        run: npm ci
       - name: Run Build
-        run: pnpm run build
+        run: npm run build
       - name: Run Lighthouse Box
         uses: abordage/lighthouse-box@1.0.2
         with:
