--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Working dir check
         run: echo $(pwd)
+      - name: Check Chrome
+        run: echo $CHROME_PATH
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -31,14 +33,12 @@ jobs:
         run: pnpm install
       - name: Run Build
         run: pnpm run build:dev
-      - name: Run Custom Action
-        id: run_custom_action
-        uses: seungjaey/lighthouse-ci-action@v0.0.3
+      - name: Audit URLs using Lighthouse
+        uses: treosh/lighthouse-ci-action@v9
         with:
-          INPUT_URL_PREFIX: http://localhost:3000
-          INPUT_URL_LIST: |
-            [상품상세] 싱글 콘텐츠__SEP__/goods/5063942
-            [상품상세] 멀티 콘텐츠__SEP__/goods/5094163
-            [상품상세] 옵션형 콘텐츠__SEP__/goods/1000001181
-            [상품상세] 캘린더형 콘텐츠__SEP__/goods/1000001210
-          INPUT_GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          urls: |
+            https://hamtolchu.dev/
+            https://hamtolchu.dev/photos
+          budgetPath: ./budget.json # test performance budgets
+          uploadArtifacts: true # save results as an action artifacts
+          temporaryPublicStorage: true # upload lighthouse report to the temporary storage
