--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -32,9 +32,6 @@ jobs:
       - name: Audit URLs using Lighthouse
         uses: treosh/lighthouse-ci-action@v9
         with:
-          urls: |
-            https://hamtolchu.dev/
-            https://hamtolchu.dev/photos
-          budgetPath: ./budget.json # test performance budgets
+          configPath: ./lighthouserc.json
           uploadArtifacts: true # save results as an action artifacts
           temporaryPublicStorage: true # upload lighthouse report to the temporary storage
