--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -32,6 +32,6 @@ jobs:
       - name: Audit URLs using Lighthouse
         uses: treosh/lighthouse-ci-action@v9
         with:
-          configPath: ./lighthouserc.json
+          configPath: ./.lighthouserc.json
           uploadArtifacts: true # save results as an action artifacts
           temporaryPublicStorage: true # upload lighthouse report to the temporary storage
