--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -30,8 +30,15 @@ jobs:
       - name: Run Build
         run: npm run build
       - name: Audit URLs using Lighthouse
+        id: lighthouse
         uses: seungjaey/lighthouse-action@v0.0.beta-0
         with:
-          configPath: ./.lighthouserc.json
-          uploadArtifacts: true # save results as an action artifacts
-          temporaryPublicStorage: true # upload lighthouse report to the temporary storage
+          INPUT_URL_PREFIX: http://localhost:3000
+          INPUT_URL_LIST: |
+            [상품상세] 싱글 콘텐츠__SEP__/goods/5063942
+            [상품상세] 멀티 콘텐츠__SEP__/goods/5094163
+            [상품상세] 옵션형 콘텐츠__SEP__/goods/1000001181 
+            [상품상세] 캘린더형 콘텐츠__SEP__/goods/1000001210
+          INPUT_GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check output
+        run: echo ${{ steps.lighthouse.output.OUTPUT_MD }}
