--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -34,6 +34,5 @@ jobs:
             홈__SEP__/
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Check output
-        with:
-          MD_STR: ${{ steps.lighthouse.output.MD_STRING }}
-        run: echo $MD_STR
+        run: echo ${{ steps.lighthouse.output.MD_STRING }}
+
