--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -26,13 +26,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Audit URLs using Lighthouse
-        id: lighthouse
-        uses: seungjaey/action-playground@v0.0.beta-0
+        uses: treosh/lighthouse-ci-action@v9
         with:
-          URL_PREFIX: https://hamtolchu.dev
-          URL_LIST: |
-            홈__SEP__/
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Check output
-        run: echo ${{ steps.lighthouse.output.MD_STRING }}
+          urls: |
+            https://hamtolchu.dev/
+            https://hamtolchu.dev/blog
+          uploadArtifacts: true # save results as an action artifacts
+          temporaryPublicStorage: true # upload lighthouse report to the temporary storage
 
