--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -8,7 +8,7 @@
         "https://hamtolchu.dev/",
         "https://hamtolchu.dev/photos"
       ],
-      "startServerCommand": "npm run start",
+      "startServerCommand": "npm run dev",
       "startServerReadyPattern": "started server on",
       "isSinglePageApplication": false,
       "numberOfRuns": 1,
