--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -25,6 +25,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Install Packages
+        run: npm install
       - name: Audit URLs using Lighthouse
         uses: treosh/lighthouse-ci-action@v9
         with:
