--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Check File - Desktop
         run: echo $(cat ${{ steps.create-lighthouse-configs.outputs.DESKTOP_CONFIG_FILE_NAME }})
       - name: Check REPORT_DIR_NAME
-        run: echo $(cat ${{ steps.create-lighthouse-configs.outputs.REPORT_DIR_NAME }})
+        run: echo "${{ steps.create-lighthouse-configs.outputs.REPORT_DIR_NAME }}"
       - name: Check URL_LIST_JSON_STRING
         run: echo $(cat ${{ steps.create-lighthouse-configs.outputs.URL_LIST_JSON_STRING }})
       - name: Install Lighthouse CI
@@ -63,3 +63,8 @@ jobs:
         run: echo $(ls ./.lighthouse-report/desktop)
       - name: Check Desktop Result - Manifest
         run: echo $(ls ./.lighthouse-report/desktop/manifest.json)
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: Lighthouse-CI
+          path: ./${{ steps.create-lighthouse-configs.outputs.REPORT_DIR_NAME }}
