fix comment data source

--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -65,6 +65,7 @@ jobs:
         run: echo $(ls ./.lighthouse-report/desktop/manifest.json)
 
       - name: Parse Markdown
+        id: parse_lighthouse_report
         uses: seungjaey/parse-lighthouse-report-to-md@v0.0.beta-0.0
         with:
           URL_LIST_JSON_STRING: ${{ steps.create-lighthouse-configs.outputs.URL_LIST_JSON_STRING }}
@@ -77,7 +78,7 @@ jobs:
         id: comment_pr
         uses: thollander/actions-comment-pull-request@v1
         with:
-          message: ${{ steps.format_lighthouse_score.outputs.REPORT_MD_STRING }}
+          message: ${{ steps.parse_lighthouse_report.outputs.REPORT_MD_STRING }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Artifact
