--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -79,7 +79,7 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: ${{ steps.parse_lighthouse_report.outputs.REPORT_MD_STRING }}
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
