--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -31,7 +31,7 @@ jobs:
         run: npm run build
       - name: Create lighthouserc.json per Formfactor
         id: create-lighthouse-configs
-        uses: seungjaey/create-lighthouse-ci-config-files@v0.0.beta-0.4
+        uses: seungjaey/create-lighthouse-ci-config-files@v0.0.beta-0.5
         with:
           URL_PREFIX: http://localhost:3000
           URL_LIST: |
@@ -42,13 +42,13 @@ jobs:
       - name: Check Result - Desktop
         run: echo "${{ steps.create-lighthouse-configs.outputs.DESKTOP_CONFIG_FILE_NAME }}"
       - name: Check File - Mobile
-        run: echo $(cat ${{ steps.create-lighthouse-configs.outputs.MOBILE_CONFIG_FILE_NAME }})
+        run: echo ${{ steps.create-lighthouse-configs.outputs.MOBILE_CONFIG_FILE_NAME }}
       - name: Check File - Desktop
-        run: echo $(cat ${{ steps.create-lighthouse-configs.outputs.DESKTOP_CONFIG_FILE_NAME }})
+        run: echo ${{ steps.create-lighthouse-configs.outputs.DESKTOP_CONFIG_FILE_NAME }}
       - name: Check REPORT_DIR_NAME
         run: echo "${{ steps.create-lighthouse-configs.outputs.REPORT_DIR_NAME }}"
       - name: Check URL_LIST_JSON_STRING
-        run: echo $(cat ${{ steps.create-lighthouse-configs.outputs.URL_LIST_JSON_STRING }})
+        run: echo ${{ steps.create-lighthouse-configs.outputs.URL_LIST_JSON_STRING }}
       - name: Install Lighthouse CI
         run: npm install -g @lhci/cli
       - name: Run Lighthouse-CI Mobile
@@ -66,7 +66,7 @@ jobs:
 
       - name: Parse Markdown
         id: parse_lighthouse_report
-        uses: seungjaey/parse-lighthouse-report-to-md@v0.0.beta-0.2
+        uses: seungjaey/parse-lighthouse-report-to-md@v0.0.beta-0.3
         with:
           URL_LIST_JSON_STRING: ${{ steps.create-lighthouse-configs.outputs.URL_LIST_JSON_STRING }}
           REPORT_DIR_NAME: ${{ steps.create-lighthouse-configs.outputs.REPORT_DIR_NAME }}
