--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -1,10 +1,7 @@
 name: LHCI-PR
 
-permissions:
-  contents: write
-
 on:
-  pull_request_target:
+  pull_request:
     types: [opened, synchronize, reopened, edited]
 
 jobs:
