--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -1,5 +1,10 @@
 name: LHCI-PR
 
+permissions:
+  actions: read
+  contents: read
+  security-events: write
+
 on:
   pull_request:
     types: [opened, synchronize, reopened, edited]
