add write permissions

--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -1,9 +1,7 @@
 name: LHCI-PR
 
 permissions:
-  actions: read
-  contents: read
-  security-events: write
+  contents: read|write
 
 on:
   pull_request:
