--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -1,10 +1,7 @@
 name: LHCI-PR
 
 on:
-  pull_request_target:
-    branches:
-      - 'main'
-      - 'feature/**'
+  pull_request:
     types:
       - opened
       - synchronize
@@ -73,7 +70,7 @@ jobs:
 
       - name: Parse Markdown
         id: parse_lighthouse_report
-        uses: seungjaey/parse-lighthouse-report-to-md@v0.0.beta-0.5
+        uses: seungjaey/parse-lighthouse-report-to-md@v0.0.beta-0.6
         with:
           URL_LIST_JSON_STRING: ${{ steps.create-lighthouse-configs.outputs.URL_LIST_JSON_STRING }}
           REPORT_DIR_NAME: ${{ steps.create-lighthouse-configs.outputs.REPORT_DIR_NAME }}
