change token my own

--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -75,7 +75,7 @@ jobs:
         with:
           URL_LIST_JSON_STRING: ${{ steps.create-lighthouse-configs.outputs.URL_LIST_JSON_STRING }}
           REPORT_DIR_NAME: ${{ steps.create-lighthouse-configs.outputs.REPORT_DIR_NAME }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.TOKEN }}
           IMAGE_REPO_NAME: image-dummy
           IMAGE_REPO_OWNER_NAME: seungjaey
 
