--- a/.github/workflows/lhci.yaml
+++ b/.github/workflows/lhci.yaml
@@ -76,7 +76,7 @@ jobs:
           URL_LIST_JSON_STRING: ${{ steps.create-lighthouse-configs.outputs.URL_LIST_JSON_STRING }}
           REPORT_DIR_NAME: ${{ steps.create-lighthouse-configs.outputs.REPORT_DIR_NAME }}
           IMAGE_REPO_TOKEN: ${{ secrets.IMAGE_REPO_TOKEN }}
-          IMAGE_REPO_NAME: private-image-dummy
+          IMAGE_REPO_NAME: image-dummy
           IMAGE_REPO_OWNER_NAME: seungjaey
 
       - name: comment PR
